<?xml version="1.0"?>
<package format="2">
  <name>ambf_trace_plugin</name>
  <version>0.0.0</version>
  <description>AMBF plugin that allows static traces at init or body traces during runtime in the AMBF simulator environment</description>
  <maintainer email="henry.phalen@jhu.edu">Henry Phalen</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
